[package]
name = "evoblock1"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
gridsim = "0.2.3"
boolinator = "2.4.0"
nalgebra = "0.18.0"
rand = "0.7.0"
array-init = {version = "0.0.4", features = ["nightly"]}
rand_distr = "0.2.1"
gridsim-ui = "0.3.1"
